--- a/projeto-apeperia-b2501c63b2ebdfd8226473a6c8ffa8777e559efe/css/diferenciais.css
+++ b/projeto-apeperia-b2501c63b2ebdfd8226473a6c8ffa8777e559efe/css/diferenciais.css
@@ -1,53 +1,62 @@
+
 .diferenciais {
-    padding-top: 3.5rem;
-    padding-bottom: 3.5rem;
+  text-align: center;
 }
 
-.diferenciais__lista {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+.diferenciais-diferencial {
+  margin: 0 3em 2em 3em;
+  display: inline-block;
+  vertical-align: top;
+  text-align: left;
+  max-width: 350px;
+  padding-left: 4em;
 }
 
-.diferenciais__item {
-    max-width: 350px;   
+.diferenciais-diferencial-titulo {
+  color: #4F4C4C;
+  font-size: 1.2em;
+  margin-top: .9em;
+  margin-bottom: .6em;
 
-    box-sizing: border-box;
-    
-    padding: 2rem 0 2rem 5rem;
-}
-.diferenciais__item--tempo{
-    background: url(../img/icone-relogio.png);
-    background-repeat: no-repeat;
-    background-position: top 1.25rem left 2.5rem;
-}
-.diferenciais__item--foco{
-    background: url(../img/icone-dinheiro.png);
-    background-repeat: no-repeat;
-    background-position: top 1.25rem left 2.5rem;
-}
-.diferenciais__item--especialistas{
-    background: url(../img/icone-quimica.png);
-    background-repeat: no-repeat;
-    background-position: top 1.25rem left 2.5rem;
-}
-.item__titulo {
-    color: var(--cinza-escuro);
-    font-weight: 700;
-    font-size: 1.2rem;
-    text-transform: uppercase;
-
-    margin-bottom: 1.5rem;
+  background-repeat: no-repeat;
+  background-position: left center;
+  height: 2.5em;
+  padding-left: 42px;
+  padding-top: .5em;
+  transform: translateX(-42px);
+  text-transform: uppercase;
 }
 
-.item__texto {
-    line-height: normal;
+.diferenciais-diferencial-titulo--tempo {
+  background-image: url(../img/icone-relogio.png);
 }
-@media screen and (min-width: 1024px){
-    .diferenciais{
-        background-color: var(--cinza-claro);
-    }
-    .diferenciais__lista{
-        justify-content: space-around;
-    }
+
+
+.diferenciais-diferencial-titulo--foco {
+  background-image: url(../img/icone-dinheiro.png);
+}
+
+
+.diferenciais-diferencial-titulo--especialistas {
+  background-image: url(../img/icone-quimica.png);
+}
+
+
+
+
+@media (min-width: 830px) {
+
+
+  .secaoDiferenciais {
+    padding-bottom: 0;
+    background-color: #f7f4f4;
+  }
+
+
+  .diferenciais-diferencial {
+    margin: 0 .5em;
+    font-size: .9em;
+    max-width: 260px;
+  }
+
 }
